--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 Anime.js
             </a>
             <a href="./scrollmagic.html">ScrollMagic.js</a>
+            <a href="./morph.html">Morphing SVGs</a>
         </div>
     </main>
 </body>
